[package]
[package]
name = "flux"
version = "0.1.0"      
description = "Flux V1 - Version control and asset management for creative files (Blender support)"
license = "MIT"            
repository = "https://github.com/YOUR_GITHUB_USERNAME/flux"  
homepage = "https://YOUR_GITHUB_USERNAME.github.io/flux"     
keywords = ["cli", "version-control", "blender", "assets"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "flux"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
byteorder = "1.5.0"
clap = { version = "4.5.1", features = ["derive"] }
hex = "0.4.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sha2 = "0.10.8"
similar = { version = "2.4.0", features = ["inline"] }